Update output directory paths in configuration files and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ __pycache__
 maft/modeling/pixel_decoder/ops/MultiScaleDeformableAttention.egg-info
 maft/modeling/pixel_decoder/ops/build
 
-out
+output/
