--- a/configs/semantic/eval_lars_coco.yaml
+++ b/configs/semantic/eval_lars_coco.yaml
@@ -6,20 +6,18 @@ MODEL:
   META_ARCHITECTURE: "MAFT_Plus"
   SEM_SEG_HEAD:
     NAME: "FCCLIPHead"
-    NUM_CLASSES: 11  # Lars COCO has 11 categories
+    NUM_CLASSES: 11
   FC_CLIP:
     CLIP_MODEL_NAME: "convnext_large_d_320"  
     CLIP_PRETRAINED_WEIGHTS: "laion2b_s29b_b131k_ft_soup" 
     EMBED_DIM: 768
     GEOMETRIC_ENSEMBLE_ALPHA: -1.
     GEOMETRIC_ENSEMBLE_BETA: -1.
-  rc_weights: 0.1
 
 INPUT:
   DATASET_MAPPER_NAME: "mask_former_semantic"  # This enables detailed per-class metrics
 
 DATASETS:
-  TRAIN: ("lars_coco_train_sem_seg",)   # Not used for eval-only
-  TEST: ("lars_coco_val_sem_seg",)      # Your lars_coco semantic validation set
+  TEST: ("lars_coco_val_sem_seg",)
 
 OUTPUT_DIR: ./output/semantic/lars_coco_evaluation 
