--- a/configs/panoptic/train_lars_coco.yaml
+++ b/configs/panoptic/train_lars_coco.yaml
@@ -57,4 +57,5 @@ DATALOADER:
   FILTER_EMPTY_ANNOTATIONS: True
   NUM_WORKERS: 2
 
-OUTPUT_DIR: /data/mfreiberg/output/panoptic/lars_coco_training
+# OUTPUT_DIR: /data/mfreiberg/output/panoptic/lars_coco_training
+OUTPUT_DIR: ./output
